# swh-lister

./: .copier-answers.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS  AUTHORS  CONTRIBUTORS  MANIFEST.in  PKG-INFO  README  README.md  README.rst  TODO  conftest.py  mypy.ini  pyproject.toml  pytest.ini  requirements-swh.txt  requirements-test.txt  requirements.txt  setup.py  swh-lister_0.0.1.orig.tar.gz.delta  swh-lister_0.0.1.orig.tar.gz.id  swh-lister_0.0.10.orig.tar.gz.delta  swh-lister_0.0.10.orig.tar.gz.id  swh-lister_0.0.11.orig.tar.gz.delta  swh-lister_0.0.11.orig.tar.gz.id  swh-lister_0.0.12.orig.tar.gz.delta  swh-lister_0.0.12.orig.tar.gz.id  swh-lister_0.0.13.orig.tar.gz.delta  swh-lister_0.0.13.orig.tar.gz.id  swh-lister_0.0.14.orig.tar.gz.delta  swh-lister_0.0.14.orig.tar.gz.id  swh-lister_0.0.15.orig.tar.gz.delta  swh-lister_0.0.15.orig.tar.gz.id  swh-lister_0.0.16.orig.tar.gz.delta  swh-lister_0.0.16.orig.tar.gz.id  swh-lister_0.0.17.orig.tar.gz.delta  swh-lister_0.0.17.orig.tar.gz.id  swh-lister_0.0.18.orig.tar.gz.delta  (+279 more)
debian/: changelog  clean  control  copyright  pybuild.testfiles  rules
docs/: Makefile  cli.rst  index.rst  new_lister_template.py  run_a_new_lister.rst  save_forge.rst  tutorial-2017.rst  tutorial.rst
etc/: crontab
ghlister/: db_utils.py  lister.py  models.py
sql/: crawler.sql  pimp_db.sql
swh.lister.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
swh.lister.github.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
swh/lister/: __init__.py  _version.py  cli.py  pattern.py  pytest_plugin.py  utils.py
swh/lister/arch/: __init__.py  lister.py  tasks.py
swh/lister/arch/tests/: __init__.py  test_lister.py  test_tasks.py
swh/lister/aur/: __init__.py  lister.py  tasks.py
swh/lister/aur/tests/: test_lister.py  test_tasks.py
swh/lister/bioconductor/: __init__.py  lister.py  tasks.py
swh/lister/bioconductor/tests/: test_lister.py  test_tasks.py
swh/lister/bitbucket/: __init__.py  lister.py  models.py  tasks.py
swh/lister/bitbucket/tests/: conftest.py  test_bb_lister.py  test_lister.py  test_tasks.py
swh/lister/bower/: __init__.py  lister.py  tasks.py
swh/lister/bower/tests/: test_lister.py  test_tasks.py
swh/lister/cgit/: __init__.py  lister.py  models.py  tasks.py
swh/lister/cgit/tests/: api_response.html  conftest.py  repo_list.txt  response.html  test_lister.py  test_tasks.py
swh/lister/conda/: __init__.py  lister.py  tasks.py
swh/lister/conda/tests/: test_lister.py  test_tasks.py
swh/lister/core/: abstractattribute.py  db_utils.py  indexing_lister.py  lister_base.py  lister_transports.py  models.py  page_by_page_lister.py  paging_lister.py  simple_lister.py  tasks.py
swh/lister/core/tests/: conftest.py  test_abstractattribute.py  test_indexing_lister.py  test_lister.py  test_model.py
swh/lister/cpan/: __init__.py  lister.py  tasks.py
swh/lister/cpan/tests/: test_lister.py  test_tasks.py
swh/lister/cran/: __init__.py  list_all_packages.R  lister.py  models.py  tasks.py
swh/lister/cran/tests/: conftest.py  test_lister.py  test_tasks.py
swh/lister/crates/: __init__.py  lister.py  tasks.py
swh/lister/crates/tests/: __init__.py  test_lister.py  test_tasks.py
swh/lister/debian/: __init__.py  lister.py  models.py  tasks.py  utils.py
swh/lister/debian/tests/: conftest.py  test_init.py  test_lister.py  test_models.py  test_tasks.py
swh/lister/dlang/: __init__.py  lister.py  tasks.py
swh/lister/dlang/tests/: test_lister.py  test_tasks.py
swh/lister/elm/: __init__.py  lister.py  tasks.py
swh/lister/elm/tests/: test_lister.py  test_tasks.py
swh/lister/fedora/: __init__.py  lister.py  tasks.py
swh/lister/fedora/tests/: test_lister.py  test_tasks.py
swh/lister/forgejo/: __init__.py  lister.py  tasks.py
swh/lister/gerrit/: __init__.py  lister.py  tasks.py
swh/lister/gitea/: __init__.py  lister.py  models.py  tasks.py
swh/lister/github/: __init__.py  base.py  cache.py  constants.py  converters.py  generate_tasks.py  github_api.py  lister.py  models.py  processors.py  req_queue.py  storage_utils.py  tasks.py  utils.py
swh/lister/gitiles/: __init__.py  lister.py  tasks.py
swh/lister/gitlab/: __init__.py  lister.py  models.py  tasks.py
swh/lister/gitweb/: __init__.py  lister.py  tasks.py
swh/lister/gnu/: __init__.py  lister.py  models.py  tasks.py  tree.py
swh/lister/gogs/: __init__.py  lister.py  tasks.py
swh/lister/golang/: __init__.py  lister.py  tasks.py
swh/lister/grokmirror/: __init__.py  lister.py  tasks.py
swh/lister/hackage/: __init__.py  lister.py  tasks.py
swh/lister/heptapod/: __init__.py  lister.py  tasks.py
swh/lister/hex/: __init__.py  lister.py  tasks.py
swh/lister/hgweb/: __init__.py  lister.py  tasks.py
swh/lister/julia/: __init__.py  lister.py  tasks.py
swh/lister/launchpad/: __init__.py  lister.py  models.py  tasks.py
swh/lister/maven/: README.md  __init__.py  lister.py  tasks.py
swh/lister/nixguix/: __init__.py  lister.py  tasks.py
swh/lister/npm/: __init__.py  lister.py  models.py  tasks.py
swh/lister/nuget/: __init__.py  lister.py  tasks.py
swh/lister/opam/: __init__.py  lister.py  tasks.py
swh/lister/packagist/: __init__.py  lister.py  models.py  tasks.py
swh/lister/pagure/: __init__.py  lister.py  tasks.py
swh/lister/phabricator/: __init__.py  lister.py  models.py  tasks.py
swh/lister/phorge/: __init__.py  lister.py  tasks.py
swh/lister/pubdev/: __init__.py  lister.py  tasks.py
swh/lister/puppet/: __init__.py  lister.py  tasks.py
swh/lister/pypi/: __init__.py  lister.py  models.py  tasks.py
swh/lister/rpm/: __init__.py  lister.py  tasks.py
swh/lister/rpm/config/: epel.yml  (+5 more)
swh/lister/rubygems/: __init__.py  lister.py  tasks.py
swh/lister/save_bulk/: __init__.py  lister.py  tasks.py
swh/lister/sourceforge/: __init__.py  lister.py  tasks.py
swh/lister/stagit/: __init__.py  lister.py  tasks.py
swh/lister/tests/: test_cli.py  test_lister_packages.py  test_pattern.py  test_utils.py  tests_tasks_setup.py  utils.py
swh/lister/tuleap/: __init__.py  lister.py  tasks.py
(+360 files in other folders)
